--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,14 +96,15 @@
 		"How-to": "content",
 		"US": "Storybook",
 		"test-plan": "meta",
-		"mochawesome-report": "log",
+		"playwright-report": "log",
+		"test-results": "log",
 		"smoke": "rules",
 		"sanity": "rules",
 		"regression": "rules",
 		"in-sprint": "rules",
 		"cucumber-test": "Resolver",
 		"fixtures": "container",
-		"support": "Helper",
+		"tests-examples": "Helper",
 		"xhr-fetch": "batch",
 		"material-icons": "examples",
 		"workflows": "github"
