--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "1.29.1",
-    "lariat": "^1.4.1"
+    "lariat": "1.4.1"
   }
 }
