new Playpex with Cucumber repo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,27 +85,27 @@
 		"api-testing": "api",
 		"db-testing": "database",
 		"ui-testing": "app",
-		"BDD Stories": "rules",
-		"feature-example": "rules",
-		"Step-Definitions": "test",
+		"features": "meta",
+		"acceptance": "coverage",
+		"stepDefinitions": "test",
 		"suites": "test",
-		"cucumber-json": "Resolver",
+		"cucumber-formatter": "environment",
 		"DOM": "class",
 		"POM": "context",
 		"Pages": "context",
 		"How-to": "content",
 		"US": "Storybook",
-		"test-plan": "meta",
+		"test-plan": "docs",
 		"playwright-report": "log",
-		"test-results": "log",
-		"smoke": "rules",
-		"sanity": "rules",
-		"regression": "rules",
-		"in-sprint": "rules",
+		"smoke": "core",
+		"sanity": "target",
+		"regression": "ci",
+		"in-sprint": "Storybook",
+		"sprint-1": "Storybook",
 		"cucumber-test": "Resolver",
 		"fixtures": "container",
-		"tests-examples": "Helper",
-		"xhr-fetch": "batch",
+		"support": "Helper",
+		"cucumber-html-report": "meta",
 		"material-icons": "examples",
 		"workflows": "github"
 	},
