new cucumber repo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,11 +88,11 @@
 		"db-testing": "database",
 		"ui-testing": "app",
 		"features": "meta",
-		"acceptance": "coverage",
+		"cucumber": "Resolver",
 		"stepDefinitions": "test",
 		"suites": "test",
 		"cucumber-formatter": "environment",
-		"DOM": "class",
+		"fixture": "class",
 		"POM": "context",
 		"Pages": "context",
 		"How-to": "content",
@@ -103,8 +103,7 @@
 		"sanity": "target",
 		"regression": "ci",
 		"in-sprint": "Storybook",
-		"sprint-1": "Storybook",
-		"cucumber-test": "Resolver",
+		"test-results": "coverage",
 		"fixtures": "container",
 		"support": "Helper",
 		"cucumber-html-report": "meta",
