--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,7 @@
 name: Playwright Tests
 on:
     push:
-        branches: [main, master]
-    pull_request:
-        branches: [main, master]
+        branches: [playpex, QA]
 jobs:
     test:
         timeout-minutes: 60
@@ -27,4 +25,4 @@ jobs:
               with:
                   name: playwright-report
                   path: playwright-report/
-                  retention-days: 30
+                  retention-days: 10
