--- a/.prettierrc
+++ b/.prettierrc
@@ -4,12 +4,10 @@
 	"useTabs": true,
 	"tabWidth": 4,
 	"bracketSpacing": true,
-	"arrowParents": "always",
+	"arrowParents": "avoid",
 	"trailingComma": "es5",
-	"bracketSameLine": false,
-	"proseWrap": "never",
+	"bracketSameLine": true,
+	"proseWrap": "always",
 	"printWidth": 150,
-	"vueIndentScriptAndStyle": false,
-	"embeddedLanguageFormatting": "off",
-	"htmlWhitespaceSensitivity": "css"
+	"embeddedLanguageFormatting": "auto"
 }
