--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
 	"type": "module",
 	"devDependencies": {
 		"@playwright/test": "1.30.0",
+		"@typescript-eslint/eslint-plugin": "5.53.0",
 		"allure-playwright": "2.0.0-beta.26",
+		"eslint": "8.34.0",
+		"eslint-config-standard-with-typescript": "34.0.0",
+		"eslint-plugin-import": "2.27.5",
+		"eslint-plugin-n": "15.6.1",
+		"eslint-plugin-promise": "6.1.1",
 		"typescript": "4.9.5"
 	}
 }
