--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "playwright project with typescript and azure devops integration",
 	"main": "index.js",
 	"scripts": {
+		"pw:browser": "npx playwright install chromium firefox webkit",
 		"plan": "npx playwright test --project=chromium --list",
-		"test": "npx playwright test --project=chromium --headed",
+		"test": "npx playwright test --project=chromium --reporter=list",
 		"debug": "npx playwright test --project=chromium --headed --reporter=list",
 		"inspect": "npx playwright test --project=chromium --debug --reporter=list",
 		"headless": "npx playwright test --project=chromium",
@@ -27,11 +28,10 @@
 		"@typescript-eslint/parser": "^5.53.0",
 		"allure-playwright": "2.0.0-beta.26",
 		"eslint": "8.34.0",
-		"eslint-config-standard-with-typescript": "34.0.0",
-		"eslint-plugin-import": "2.27.5",
-		"eslint-plugin-n": "15.6.1",
-		"eslint-plugin-promise": "6.1.1",
-		"prettier": "^2.8.4",
+		"prettier": "2.8.4",
 		"typescript": "4.9.5"
+	},
+	"dependencies": {
+		"eslint-plugin-only-warn": "^1.1.0"
 	}
 }
