--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
 		"@typescript-eslint/parser": "^5.53.0",
 		"allure-playwright": "2.0.0-beta.26",
 		"eslint": "8.34.0",
+		"eslint-plugin-only-warn": "1.1.0",
 		"prettier": "2.8.4",
 		"typescript": "4.9.5"
-	},
-	"dependencies": {
-		"eslint-plugin-only-warn": "^1.1.0"
 	}
 }
