--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 	"type": "module",
 	"devDependencies": {
 		"@playwright/test": "1.30.0",
-		"@typescript-eslint/eslint-plugin": "^5.53.0",
-		"@typescript-eslint/parser": "^5.53.0",
+		"@typescript-eslint/eslint-plugin": "5.53.0",
+		"@typescript-eslint/parser": "5.53.0",
 		"allure-playwright": "2.0.0-beta.26",
 		"eslint": "8.34.0",
 		"eslint-plugin-only-warn": "1.1.0",
