--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,9 +40,9 @@
 	"eslint.codeAction.showDocumentation": {
 		"enable": true
 	},
-	"editor.formatOnType": false,
-	"editor.formatOnPaste": false,
-	"editor.formatOnSave": false,
+	"editor.formatOnType": true,
+	"editor.formatOnPaste": true,
+	"editor.formatOnSave": true,
 	"editor.wordWrap": "on",
 	"editor.accessibilitySupport": "off",
 	"editor.bracketPairColorization.independentColorPoolPerBracketType": true,
