--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@typescript-eslint/eslint-plugin": "5.53.0",
 		"@typescript-eslint/parser": "5.53.0",
 		"allure-playwright": "2.0.0-beta.26",
+		"dotenv": "^16.0.3",
 		"eslint": "8.34.0",
 		"eslint-plugin-only-warn": "1.1.0",
 		"prettier": "2.8.4",
