--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -1,26 +1,41 @@
-name: Playwright Tests
+name: 🧪Playwright Regression Testing
+run-name: ${{github.actor}}👨🏻‍🔬 ran Regression in ${{github.ref_name}}
 on:
-  push:
-    branches: [ main, master ]
+    push:
+        branches: [main, QA]
 
 jobs:
-  test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 16
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+    test:
+        timeout-minutes: 60
+        runs-on: ubuntu-latest
+        steps:
+            - name: 📘Checkout Repo
+              uses: actions/checkout@v3
+
+            - name: 💿Installing Node.js
+              uses: actions/setup-node@v3
+              with:
+                  node-version: 16
+
+            - name: 💾Installing Dependencies
+              run: npm ci
+
+            - name: 💻Installing Playwright Browsers
+              run: npm run pw:browsers
+
+            - name: ✅🧪Regression Tests Execution
+              run: |
+                  npm run plan
+                  npm run regression
+
+            - name: 📊Generate Allure Report
+              run: |
+                  npm run allure
+
+            - name: 📡Upload Artifact - Allure Report
+              uses: actions/upload-artifact@v3
+              if: always()
+              with:
+                  name: test-report
+                  path: allure-report/
+                  retention-days: 15
