--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
 	"description": "playwright project with typescript and azure devops integration",
 	"main": "index.js",
 	"scripts": {
-		"pw:browser": "npx playwright install chromium firefox webkit",
+		"pw:browsers": "npx playwright install chromium firefox webkit",
 		"plan": "npx playwright test --project=chromium --list",
 		"test": "npx playwright test --project=chromium",
 		"debug": "npx playwright test --project=chromium --debug --reporter=list",
-		"report": "npx playwright show-report",
-		"test:open": "npx playwright test --project=chromium --headed --reporter=list",
+		"test:chrome": "npx playwright test --project=chromium --headed --reporter=list",
 		"test:firefox": "npx playwright test --project=firefox --headed --reporter=list",
 		"test:webkit": "npx playwright test --project=webkit --headed --reporter=list",
-		"test:all": "npx playwright test --headed --reporter=list",
-		"allure": "allure serve --host localhost --port 9090"
+		"regression": "npx playwright test --reporter=list",
+		"allure": "allure generate --clean && allure open --host localhost --port 9090"
 	},
 	"keywords": [
 		"playwright"
