--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
 		"test:edge": "npx playwright test --project=msedge --headed --reporter=list",
 		"test:all": "npx playwright test --reporter=list",
 		"allure": "allure generate --clean",
-		"allure:open": "allure generate --clean && allure open --host localhost --port 9090"
+		"allure:open": "allure generate --clean && allure open --host localhost --port 9090",
+		"prettier:write": "npx prettier --write .",
+		"prettier:check": "npx prettier --check .",
+		"lint:check": "npx eslint apps/**/*.ts",
+		"lint:fix": "npx eslint --fix apps/**/*.ts"
 	},
 	"keywords": [
 		"playwright"
@@ -24,13 +28,13 @@
 	"type": "module",
 	"devDependencies": {
 		"@playwright/test": "1.30.0",
-		"@typescript-eslint/eslint-plugin": "5.53.0",
-		"@typescript-eslint/parser": "5.53.0",
 		"allure-commandline": "2.21.0",
 		"allure-playwright": "2.0.0-beta.26",
 		"dotenv": "16.0.3",
 		"eslint": "8.34.0",
 		"eslint-plugin-only-warn": "1.1.0",
+		"@typescript-eslint/eslint-plugin": "5.53.0",
+		"@typescript-eslint/parser": "5.53.0",
 		"prettier": "2.8.4",
 		"typescript": "4.9.5"
 	}
