new pw feature for pages: TestBase On branch QA Changes to be committed: 	new file:   tests/challengeLibrary/challengeList.test.ts 	modified:   tests/helper/debugger.ts 	new file:   tests/pages/ChallengesLPage.ts 	modified:   tests/pages/LoginPage.ts 	new file:   tests/pages/TestBase.ts 	modified:   tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
-    "compilerOptions": {
-        "target": "ES2022",
-        "moduleResolution": "Node",
-		"types": ["node","@playwright/test"],
+	"compilerOptions": {
+		"target": "ES2022",
+		"moduleResolution": "Node",
+		"types": ["node", "@playwright/test"],
 		"baseUrl": ".",
 		"paths": {
 			"@pages/*": ["./tests/pages/*"],
-			"@helper/*": ["./tests/helper/*"]
+			"@helper/*": ["./tests/helper/*"],
+			"@TestBase": ["./tests/pages/TestBase.ts"]
 		}
 	},
-    "exclude": ["node_modules"]
+	"exclude": ["node_modules"]
 }
