--- a/.github/workflows/CI-RegressionQA.yml
+++ b/.github/workflows/CI-RegressionQA.yml
@@ -43,16 +43,16 @@ jobs:
                   path: allure-report
                   retention-days: 15
 
-            - name: ✅Import Test Results to Xray
-              if: always()
-              uses: mikepenz/xray-action@v2
-              with:
-                  username: ${{secrets.XRAY_CLIENT_ID}}
-                  password: ${{secrets.XRAY_CLIENT_SECRET}}
-                  testFormat: 'junit'
-                  testPaths: 'playwright-report/importer-report.xml'
-                  testExecKey: 'GX3-4'
-                  projectKey: 'GX3'
+#             - name: ✅Import Test Results to Xray
+#               if: always()
+#               uses: mikepenz/xray-action@v2
+#               with:
+#                   username: ${{secrets.XRAY_CLIENT_ID}}
+#                   password: ${{secrets.XRAY_CLIENT_SECRET}}
+#                   testFormat: 'junit'
+#                   testPaths: 'playwright-report/importer-report.xml'
+#                   testExecKey: 'GX3-4'
+#                   projectKey: 'GX3'
 
     Create-PullRequest:
         needs: [RegressionTesting]
