--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,5 +68,8 @@
 		"ParseHAR": false,
 		"mockAutocomplete": false
 	},
-	"cSpell.autoFormatConfigFile": true
+	"cSpell.autoFormatConfigFile": true,
+	"githubPullRequests.ignoredPullRequestBranches": [
+		"QA"
+	]
 }
