--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ allure-report
 allure-results
 test-results
 .pytest_cache
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
+blob-report/
+playwright/.cache/
+package-lock.json
