--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "playwright project with typescript and azure devops integration",
 	"main": "index.js",
 	"scripts": {
-		"pw:install": "npx playwright install --with-deps chromium firefox msedge",
+		"pw:install": "npx playwright install --with-deps",
 		"test:plan": "npx playwright test --project=chromium --list",
 		"test": "npx playwright test --project=chromium --headed",
 		"debug": "npx playwright test --project=chromium --debug --reporter=list",
@@ -14,8 +14,8 @@
 		"test:edge": "npx playwright test --project=msedge --headed --reporter=list",
 		"allure:clean": "allure generate --clean",
 		"allure:report": "allure generate --clean && allure open --host localhost --port 9090",
-		"prettier:write": "npx prettier --write .",
-		"prettier:check": "npx prettier --check .",
+		"prettier:write": "npx prettier --write tests/**/*.ts",
+		"prettier:check": "npx prettier --check tests/**/*.ts",
 		"lint:check": "npx eslint tests/**/*.ts",
 		"lint:fix": "npx eslint --fix tests/**/*.ts"
 	},
@@ -26,16 +26,16 @@
 	"license": "ISC",
 	"type": "module",
 	"devDependencies": {
-		"@playwright/test": "^1.39.0",
+		"@playwright/test": "1.39.0",
 		"@types/node": "20.9.0",
-		"@typescript-eslint/eslint-plugin": "5.53.0",
-		"@typescript-eslint/parser": "5.53.0",
-		"allure-commandline": "2.21.0",
-		"allure-playwright": "2.0.0-beta.26",
+		"@typescript-eslint/eslint-plugin": "6.11.0",
+		"@typescript-eslint/parser": "6.11.0",
+		"allure-commandline": "2.24.1",
+		"allure-playwright": "2.9.2",
 		"dotenv": "16.0.3",
-		"eslint": "8.34.0",
+		"eslint": "8.53.0",
 		"eslint-plugin-only-warn": "1.1.0",
-		"prettier": "2.8.4",
-		"typescript": "4.9.5"
+		"prettier": "3.1.0",
+		"typescript": "5.2.2"
 	}
 }
