--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"test:chrome": "npx playwright test --project=chromium --headed --reporter=list",
 		"test:firefox": "npx playwright test --project=firefox --headed --reporter=list",
 		"test:edge": "npx playwright test --project=msedge --headed --reporter=list",
-		"allure:clean": "allure generate --clean",
+		"allure:open": "allure generate --clean",
 		"allure:report": "allure generate --clean && allure open --host localhost --port 9090",
 		"prettier:write": "npx prettier --write tests/**/*.ts",
 		"prettier:check": "npx prettier --check tests/**/*.ts",
