--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
 	"compilerOptions": {
-		"target": "esnext",
+		"module": "ESNext",
+		"target": "ESNext",
 		"moduleResolution": "Node",
+		"resolveJsonModule": true,
+		"esModuleInterop": true,
 		"types": ["node"],
 		"baseUrl": ".",
 		"paths": {
