All test design finished

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ test-results
 blob-report/
 playwright/.cache/
 package-lock.json
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
