test(GX3-1337): finish test/pipeline for fillform submit On branch test/GX3-1337/fillform-submit Your branch is up to date with 'origin/test/GX3-1337/fillform-submit'.
Changes to be committed:
	modified:   .github/workflows/sanity-template.yml
	new file:   .github/workflows/sanityEly.yml
	modified:   package.json
	modified:   tests/data/elyUserDetails.json
	modified:   tests/elements/form_GX3-1337.test.ts
	new file:   tests/helper/testUtils.ts

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
 	"description": "playwright project with typescript and azure devops integration",
 	"main": "index.js",
 	"scripts": {
-		"pw:install": "npx playwright install --with-deps",
+		"pw:install": "npx playwright install --with-deps chromium",
 		"test:plan": "npx playwright test --project=chromium --list",
-		"test": "npx playwright test --project=chromium --headed",
-		"debug": "npx playwright test --project=chromium --debug --reporter=list",
+		"test": "npx playwright test --project=chromium",
+		"debug": "npx playwright test --project=chromium --debug",
 		"regression": "npx playwright test --project=chromium",
-		"test:chrome": "npx playwright test --project=chromium --headed --reporter=list",
-		"test:firefox": "npx playwright test --project=firefox --headed --reporter=list",
-		"test:edge": "npx playwright test --project=msedge --headed --reporter=list",
+		"test:chrome": "npx playwright test --project=chromium --headed",
+		"test:firefox": "npx playwright test --project=firefox --headed",
+		"test:edge": "npx playwright test --project=msedge --headed",
 		"allure:open": "allure generate --clean",
 		"allure:report": "allure generate --clean && allure open --host localhost --port 7070",
 		"prettier:write": "npx prettier --write tests/**/*.ts",
