--- a/.github/workflows/sanityEly.yml
+++ b/.github/workflows/sanityEly.yml
@@ -1,18 +1,8 @@
-#*🤖Este Pipeline de CI se activa al PUSHEAR o MERGEAR en ramas de tareas que no sean QA ni Main, y consiste en ejecutar los tests de una US e importar los resultados a Jira!🚀
-#*👩🏻‍🔬Para utilizar este Pipeline de Ari, sigue los siguientes pasos:
-#todo: 1 -> Crea tu propio archivo sanity.yml con tu username de GitHub, ejemplo sanity-saiotest.yml
-#todo: 2 -> Copia el contenido de este archivo yml y pégalo en tu nuevo archivo yml con de tu username.
-#todo: 3 -> Modifica la trigger del Push en donde dice "TuBranchAqui", coloca tu nombre tal cual de tu rama git.
-#todo: 4 -> Modifica el archivo de prueba a ejectuar en el script del "yarn test" (ver ejemplo en este archivo)
-#todo: 5 -> Modifica la propiedad: "testExecKey" con tu ID del TX de Jira para importar automáticamente el resultado.
-#todo: 6 -> Recuerda modificar el projectKey correspondiente, si estás en L3, debe ser GX3 y así...
-#todo: 7 -> Listo! Guarda los cambios (git add + git commit) y pushea (git push) para ejectutar este Pipeline!
-#*Resultado: Debería ejecutarse este Pipeline de GitHub Actions y correr cada uno de los Jobs declarados aquí.
-name: 🧪Playwright Sanity Testing
+name: 🧪Playwright Ely's Sanity Testing
 run-name: ${{github.actor}}👨🏻‍🔬 ran TestSuite in ${{github.ref_name}}
 on:
     push:
-        branches: ['TuBranchAqui'] #! Cambia "TuBranchAqui" por el nombre de tu rama de tarea.
+        branches: ['test/GX3-1337/fillform-submit'] #! Cambia "TuBranchAqui" por el nombre de tu rama de tarea.
 
 jobs:
     TestSuite:
@@ -50,7 +40,7 @@ jobs:
               uses: actions/upload-artifact@v3
               if: always()
               with:
-                  name: test-report
+                  name: test-report-results
                   path: allure-report
                   retention-days: 15
 
@@ -62,7 +52,7 @@ jobs:
                   password: ${{secrets.XRAY_CLIENT_SECRET}}
                   testFormat: 'junit'
                   testPaths: 'playwright-report/importer-report.xml'
-                  testExecKey: 'GX3-4' #!Cambiar a tu TX correspondiente.
+                  testExecKey: 'GX3-1344' #!Cambiar a tu TX correspondiente.
                   projectKey: 'GX3' #!Cambiar a tu Proyecto Level correspondiente.
 
             - name: 🔔Slack Notification of Done
